# cw20_token_exchange

./: deploy.sh  env.sh
cli/: README.md  bun.lockb  command_parser.ts  consts.ts  index.ts  package.json  types.ts  utils.ts
contract/: Cargo.toml
contract/.cargo/: config.toml
contract/schema/: contract.json
contract/schema/raw/: execute.json  sudo.json
contract/src/: lib.rs
