[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.5.0", features = ["staking"] }
cosmwasm-schema = "1.5.0"
sei-cosmwasm = "0.4.12"
cw-storage-plus = { git = "https://github.com/kkuriboh/cw-storage-plus.git" }
blake3 = "1.5.0"
arrayvec = "0.7.4"
